--- a/10-Dad Jokes/index.html
+++ b/10-Dad Jokes/index.html
@@ -4,11 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dad Jokes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <div class="container">
+        <h3>Don't laugh</h3>
+        <div id="joke" class="joke">
+            // Joke goes here
+        </div>
+        <button id="jokebtn" class="btn">Get another Joke</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
